# crystalDB

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  MySQL-Add Tables.ipynb  MySQL-Create Database.ipynb  README.md  VISUAL_GUIDE.md  docker-compose.yml  material2.csv  pyproject.toml  show_db.py  show_details.py  solvent.csv
Web application/: app.py
Web application/templates/: add_experiment.html  add_material.html  add_measurement.html  add_morphology.html  add_solvent.html  dashboard.html  home.html  layout.html  register.html
Web application/templates/includes/: _messages.html  _navbar.html
scripts/: import_data.py  init_db.py
src/crystaldb/: __init__.py  main.py
src/crystaldb/api/: __init__.py  app.py
src/crystaldb/api/routers/: __init__.py  experiments.py  materials.py  solvents.py
src/crystaldb/core/: __init__.py  config.py  exceptions.py  logging.py
src/crystaldb/db/: __init__.py  base.py  session.py
src/crystaldb/models/: __init__.py  experiment.py  material.py  measurement.py  morphology.py  solvent.py  user.py
src/crystaldb/schemas/: __init__.py  experiment.py  material.py  measurement.py  morphology.py  solvent.py  user.py
src/crystaldb/static/: index.html
src/crystaldb/static/css/: style.css
src/crystaldb/static/js/: app.js
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
